--- a/day 16.html
+++ b/day 16.html
@@ -6,15 +6,7 @@
     <title>Document</title>
 </head>
 <body>
- <h2> <b> <i> My CV </i> </b> </h2>
-
- <h3> <b> my name: Ani </h3>  </b>
- <h3> <b> my username: Nozadze </h3>  </b>
- <h3> <b> my age: 13 </h3>  </b>
-
- <h3> <b> my photo </h3>  </b>
-
-<img src=" https://scontent.ftbs2-2.fna.fbcdn.net/v/t39.30808-6/361973991_164586786642515_5019445873346601569_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEQ1tOGkcuHFFQtDPd-wPx3CazKGARmTZwJrMoYBGZNnE6TKIC1_e-BqG_BXLgSAbA7kWBb9rhCeVi8d33SdJkh&_nc_ohc=SIrsLm_dZ28AX9VWAhv&_nc_ht=scontent.ftbs2-2.fna&oh=00_AfADf9Da1NqtBYVdrk3gcJhJGLaUNK6Ri7JI5QX8ynINqQ&oe=655A86F5" alt="">
-
+    <a href="https://www.youtube.com/channel/UCRjoMwrWoD8_KNioRwWlq8g" > <h1> <i> goa </i> </h1> </a>
+    <a href="https://www.facebook.com/nika11keshelava/" > <h1> <i> goa </i> </h1> </a>
 </body>
 </html>
